--- a/source/stylesheets/shared/header.sass
+++ b/source/stylesheets/shared/header.sass
@@ -4,6 +4,7 @@ header
 
 p
   color: #171717
+  font-family: Arial, sans-serif
 
 .row
   width: 810px
@@ -21,9 +22,12 @@ p
 
   .tagline
     position: absolute
-    bottom: 10px
-    right: 0
+    bottom: 25px
+    right: 110px
     color: #FFFFFF
+    font-size: 40px
+    font-family: DIN Pro, Helvetica, sans-serif
+    font-weight: 300
 
 
 body
@@ -37,15 +41,19 @@ body
     margin-bottom: 60px
 .box
   width: 330px
-  height: 400px
+  height: 380px
   background-color: #FFFFFF
   position: relative
   float: left
   padding: 20px
   text-align: center
+  box-shadow: 1px 1px 30px black
   &:last-child
     margin-left: 50px
     margin-top: 10px
+
+.shadow
+  box-shadow: 1px 1px 20px black
 
 .skew-right
   -webkit-transform: rotateZ(1.5deg)
@@ -99,3 +107,4 @@ body
 footer
   background-color: #057a43
   height: 60px
+  margin-top: 100px
