--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 ---
 title: Welcome to Middleman
 ---
-<header>
+<header class="shadow">
   <div class="row inner">
     <div class="large-12 columns">
     <img src="/images/logo.png" class="logo">
@@ -43,4 +43,6 @@ eller korv, varm och servera.</p>
       </div>
     </div>
   </div>
-</div></div>
+</div>
+<footer class="footer shadow">
+</footer>
