--- a/source/stylesheets/shared/header.sass
+++ b/source/stylesheets/shared/header.sass
@@ -25,7 +25,7 @@ p
   .tagline
     position: absolute
     bottom: 25px
-    right: 110px
+    right: 70px
     color: #FFFFFF
     font-size: 40px
     font-family: DIN Pro, Arial, sans-serif
@@ -49,6 +49,7 @@ body
   position: relative
   float: left
   padding: 20px
+  margin-left: 50px
   text-align: center
   box-shadow: 1px 1px 30px black
   &:last-child
