--- a/source/stylesheets/shared/header.sass
+++ b/source/stylesheets/shared/header.sass
@@ -164,8 +164,12 @@ footer
 .recipename
   width: 460px
   height: 32px
+  background: transparent
   background-color: rgb(255, 255, 255)
   background-color: rgba(255, 255, 255, 0.6)
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99FFFFFF,endColorstr=#99FFFFFF)" /* IE8 */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99FFFFFF,endColorstr=#99FFFFFF)   /* IE6 & 7 */
+      zoom: 1
   position: absolute
   top: 157px
 
